syntax = "proto3";

option java_package = "com.example.demovideosuperresolution";

message Video {
  oneof data {
    VideoMetadata metadata = 1;
    bytes part = 2;
  }
}

message VideoMetadata {
  string name = 1;
}

message Box {
  BoxMetadata metadata = 1;
  bytes data = 2;
}

message BoxMetadata {
  string videoName = 1;
  uint64 frame_order = 2;
  Position position = 3;
  Dimension dimension = 4;
}

message Position {
  int32 x = 1;
  int32 y = 2;
}

message Dimension {
  int32 width = 1;
  int32 height = 2;
}